[gd_scene load_steps=13 format=3 uid="uid://dhieb3eb5rpht"]

[ext_resource type="Script" path="res://UI.gd" id="1_eogos"]
[ext_resource type="FontFile" uid="uid://drmnoahr2nd8d" path="res://Menu/BitBold.ttf" id="2_x42fi"]

[sub_resource type="Gradient" id="Gradient_e6ywt"]
offsets = PackedFloat32Array(0.226316, 0.994737)
colors = PackedColorArray(0, 0, 0, 0, 0, 0.133333, 0.25, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wijy4"]
gradient = SubResource("Gradient_e6ywt")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8rbpm"]
bg_color = Color(0.0784314, 0.14902, 0.0196078, 0.682353)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cic8j"]
bg_color = Color(0.435294, 0.8, 0, 1)
shadow_color = Color(0, 1, 0, 0.168627)
shadow_size = 33

[sub_resource type="LabelSettings" id="LabelSettings_txrp6"]
font = ExtResource("2_x42fi")
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_7eqgl"]
font = ExtResource("2_x42fi")
font_size = 26

[sub_resource type="LabelSettings" id="LabelSettings_5304n"]
font = ExtResource("2_x42fi")
font_size = 66
outline_size = 20
outline_color = Color(0.435294, 0.8, 0, 1)

[sub_resource type="Gradient" id="Gradient_050am"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_podlt"]
gradient = SubResource("Gradient_050am")

[sub_resource type="LabelSettings" id="LabelSettings_mr5hc"]
line_spacing = 20.0
font = ExtResource("2_x42fi")
font_size = 66
outline_size = 20
outline_color = Color(1, 0.352941, 0.407843, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_eogos")

[node name="Vignetting" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -52.0
offset_right = 155.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_wijy4")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 45.0
offset_top = 20.0
offset_right = 675.0
offset_bottom = 63.0
pivot_offset = Vector2(315, 20)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_x42fi")
theme_override_font_sizes/font_size = 26
theme_override_styles/background = SubResource("StyleBoxFlat_8rbpm")
theme_override_styles/fill = SubResource("StyleBoxFlat_cic8j")
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="Depth_Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "DEPTH"
label_settings = SubResource("LabelSettings_txrp6")
horizontal_alignment = 2

[node name="Depth_SCORE" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "50"
label_settings = SubResource("LabelSettings_7eqgl")
horizontal_alignment = 2

[node name="Energy_Title" type="Label" parent="."]
offset_left = 45.0
offset_top = 72.0
offset_right = 117.0
offset_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "ENERGY"
label_settings = SubResource("LabelSettings_txrp6")
horizontal_alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 240)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Get_Ready" type="Label" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GET READY"
label_settings = SubResource("LabelSettings_5304n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fader" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_podlt")

[node name="Time_Out" type="Label" parent="."]
offset_left = 110.0
offset_top = 151.0
offset_right = 610.0
offset_bottom = 238.0
size_flags_horizontal = 4
text = "-TIME OUT -"
label_settings = SubResource("LabelSettings_mr5hc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Well_Done" type="Label" parent="."]
offset_left = 60.0
offset_top = 250.0
offset_right = 660.0
offset_bottom = 337.0
size_flags_horizontal = 4
text = "- WELL DONE -"
label_settings = SubResource("LabelSettings_mr5hc")
horizontal_alignment = 1
vertical_alignment = 1
